--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ dist/
 downloads/
 eggs/
 .eggs/
+lib/
 lib64/
 parts/
 sdist/
@@ -81,13 +82,6 @@ target/
 profile_default/
 ipython_config.py
 
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
@@ -128,9 +122,12 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+.venv
 env/
+venv/
 ENV/
 env.bak/
+venv.bak/
 
 # Spyder project settings
 .spyderproject
